Fixed UI issue due to overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
     'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
@@ -17,4 +18,8 @@ code {
 #root {
   height: 100%;
   background-color: bisque;
+}
+
+* {
+  box-sizing: border-box;
 }
